argo-apps/confluence/int/confluence-int-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence
  namespace: confluence-int
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: confluence.int.catena-x.polygran.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira
                port:
                  number: 80
